--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: your-username/your-repo-name  # Replace with your GitHub username and repo name
+  repo: valyamasterov/valyafm
   branch: main
 
 media_folder: "static/images/uploads"
