--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "hugo server --baseURL http://localhost:1313",
+    "build": "hugo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
