--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "hugo server --baseURL http://localhost:1313",
-    "build": "hugo",
+    "build": "hugo --baseURL https://valyamasterov.github.io/valyafm/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
